# audtorch

./: .buildinfo  .flake8  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  NEWS.rst  README.md  README.rst  api-collate.html  api-datasets.html  api-metrics-functional.html  api-metrics.html  api-samplers.html  api-transforms-functional.html  api-transforms.html  api-utils.html  changelog.html  develop.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  refs.html  search.html  searchindex.js  setup.cfg  setup.py  usage.html
.doctrees/: api-collate.doctree  api-datasets.doctree  api-metrics-functional.doctree  api-metrics.doctree  api-samplers.doctree  api-transforms-functional.doctree  api-transforms.doctree  api-utils.doctree  changelog.doctree  develop.doctree  genindex.doctree  index.doctree  install.doctree  refs.doctree  usage.doctree
.doctrees/tutorials/: introduction.doctree
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: publish.yml  test.yml
_sources/: api-datasets.rst.txt  api-metrics-functional.rst.txt  api-samplers.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt
_sources/tutorials/: introduction.ipynb.txt
_static/: copybutton.js
audtorch/: __init__.py  collate.py  samplers.py  utils.py
audtorch/datasets/: __init__.py  audio_set.py  base.py  common.py  emodb.py  identification.py  libri_speech.py  mixture.py  mozilla_common_voice.py  musdb18.py  noise.py  scene_analysis.py  speech.py  speech_commands.py  utils.py  voxceleb1.py  white_noise.py
audtorch/metrics/: __init__.py  functional.py  losses.py  metrics.py
audtorch/transforms/: __init__.py  functional.py  transforms.py
docs/: api-collate.rst  api-datasets.rst  api-metrics.rst  api-transforms-functional.rst  api-transforms.rst  api-utils.rst  conf.py  index.rst  install.rst  refs.bib  refs.rst  requirements.txt  usage.rst
docs/tutorials/: introduction.ipynb
tests/: context.py  requirements.txt  test_collate.py  test_datasets.py  test_metrics.py  test_samplers.py  test_transforms.py  test_transforms_functional.py  test_utils.py
tutorials/: introduction.html
