[metadata]
name = audtorch
author = Andreas Triantafyllopoulos, Stephan Huber, Johannes Wagner, Hagen Wierstorf
author-email = atriant@audeering.com
description = Deep learning with PyTorch and audio
long_description = file: README.rst, CHANGELOG.rst
license = MIT License
license-file = LICENSE
keywords = audio, torch
url = https://github.com/audeering/audtorch
project_urls = 
    Documentation = https://audtorch.readthedocs.io
    Tracker = https://github.com/audeering/audtorch/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio

[options]
packages = find:
setup_requires = 
    setuptools_scm
install_requires =
    numpy
    audiofile
    librosa >=0.8.0
    resampy
    torch
    pandas
    tqdm
    tabulate
tests_require =
    pytest

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --cov=audtorch
    --cov-report term-missing
    --cov-report xml
    --cov-fail-under=60
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
